# vtr_testing_lidar

./: .gitignore  .gitmodules  README.md  generate_costmaps.sh  intensity.sh  run_lasersam_experiment.sh  run_small_lasersam.sh  run_teach.sh  voxel_ablation.sh
3dmodels/: README.md  box_large.FCStd  box_small.FCStd  car.FCStd  cone.FCStd  human.FCStd
scripts/: change_detection.py  change_detection_v2.py  plot_terrain_assessment_pr.py  plot_terrain_roughness_slope.py
scripts/results/pr_curves/grove/: no_filter.txt  no_filtering.txt  no_prior.txt  no_prior_no_filter.txt  no_prior_no_filtering.txt  proposed.txt
scripts/results/pr_curves/marsdome/: no_filter.txt  no_filtering.txt  no_prior.txt  no_prior_no_filter.txt  no_prior_no_filtering.txt  proposed.txt
scripts/results/pr_curves/parkinglot/: no_filter.txt  no_filtering.txt  no_prior.txt  no_prior_no_filter.txt  no_prior_no_filtering.txt  proposed.txt
src/rviz_vtr_plugins/: CMakeLists.txt  package.xml  plugins_description.xml
src/rviz_vtr_plugins/include/rviz_vtr_plugins/tools/publish_select/: publish_selection_tool.hpp
src/rviz_vtr_plugins/src/rviz_vtr_plugins/tools/publish_select/: publish_selection_tool.cpp
src/vtr_convert_rig_images/: CMakeLists.txt  package.xml
src/vtr_convert_rig_images/src/: rig_images_converter.cpp
src/vtr_test_lidar/: CMakeLists.txt  package.xml
src/vtr_test_lidar/config/: honeycomb.yaml  ouster.yaml  ouster_lasersam_short_test.yaml  ouster_lasersam_test.yaml  velodyne.yaml
src/vtr_test_lidar/script/: test_change_detection.sh  test_change_detection_fake.sh  test_intra_exp_merging.sh  test_localization.sh  test_map_annotation.sh  test_preprocessing.sh
src/vtr_test_lidar/script/map_maintenance/: localization.sh  odometry.sh  plot_map_maintenance.sh
src/vtr_test_lidar/script/planning/: commands.sh  planning.sh
src/vtr_test_lidar/src/: change_detection.cpp  change_detection_fake.cpp  change_detection_fake_one_frame.cpp  full_pipeline_change.cpp  full_pipeline_sequence.cpp  graph_learning.cpp  intensity_change_detection.cpp  inter_exp_merging.cpp  intra_exp_merging.cpp  lasersam_experiment.cpp  localization.cpp  odometry.cpp  planning_experiment.cpp  preprocessing.cpp  trim_pose_graph.cpp
src/vtr_testing_honeycomb/: CMakeLists.txt  package.xml
src/vtr_testing_honeycomb/config/: honeycomb.yaml
src/vtr_testing_honeycomb/include/vtr_testing_honeycomb/: utils.hpp
src/vtr_testing_honeycomb/script/: honeycomb_testing.sh  test_change_detection.sh  test_change_detection_fake.sh  test_odometry.sh  test_planning.sh  testing.sh
src/vtr_testing_honeycomb/script/map_maintenance/: bundle_map_maintenance.sh  bundle_mapping_localization.sh  commands.sh  dynamic_detection.sh  generate_graph.sh  intra_exp_merging.sh  map_maintenance.sh  plot_memap_maintenance.sh
src/vtr_testing_honeycomb/script/terrain_assessment/: commands.sh  terrain_assessment.sh
src/vtr_testing_honeycomb/src/: change_detection.cpp  change_detection_fake.cpp  change_detection_fake_one_frame.cpp  dynamic_detection.cpp  intra_exp_merging.cpp  localization.cpp  localization_planning.cpp  map_annotation.cpp  odometry.cpp  planning.cpp  plot_map_maintenance.cpp  plot_memap_maintenance.cpp  preprocessing.cpp
